# NetworkFilesSender

./: .gitignore  CMakeLists.txt  README.MD
src/common/: nfs_namesapce.h  singleton_template.h
src/controller/: device_info_collector.cpp  device_info_collector.h  discover_manager.cpp  discover_manager.h  pc_info_collector.cpp  pc_info_collector.h  settings_manager.cpp  settings_manager.h
src/gui/: ContentsPage.qml  DevicesItem.qml  DevicesPage.qml  NavigationPage.qml  SettingsItem.qml  SettingsItemIpAddress.qml  SettingsPage.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/gui/images/: images.qrc
src/main/: main.cpp
